Fixed Character Card Alignment by Putting the Player's Name and Role on the Same Line / Reformatting on Character Info Boxes(Move Descriptions) / Changed Move Box Text to 'Loading...' On Start-Up / Inserted a Commented-Out Pulsing  Animation on the Moves Boxes / Changed Text Color on Move Button

--- a/styles.css
+++ b/styles.css
@@ -125,11 +125,26 @@ footer a {
 .description {
     background-color: #ddff00;
     margin-left: 12px;
-    font-size: 4px;
     max-width: 40%;
-    border: 1px solid rgb(35, 34, 0);
+    border: 5px solid #3C3431;
+    padding: 5px 5px;
+    
     font-family: "Press Start 2P", cursive;
+    color: rgb(2, 59, 0);
+    font-size: 10px;
+    text-align: left;
+    /* Possible pulse animation for load */
+    /* animation: pulse-animation 2s infinite; */
 }
+
+/* @keyframes pulse-animation {
+  0% {
+    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+  }
+  100% {
+    box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+  }
+} */
 
 .health-player {
     font-size: 7px;
@@ -188,12 +203,14 @@ body {
   margin-top: 0px;
   text-align: center;
   font-family: "Press Start 2P", cursive;
+  color: brown;
 }
 
-.move-button a:link,
+
+/* .move-button a:link,
 a:visited {
   color: rgb(92, 56, 2);
-}
+} */
 
 .move-button:hover {
   background-image: linear-gradient(160deg, rgb(234, 255, 0), rgb(157, 181, 3)); 
@@ -219,10 +236,6 @@ a:visited {
   background-image: url("assets/background1.png");
 }
 
-/* JC: Removed sound file from flow */
-.startup-ambience {
-  display: none;
-}
 
 .text-box {
   background-color: #e9cd18;
